<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/leaveChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/action_leave_chat"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaveChat"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/leave_chat_question"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonDialog1"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonDialog2"
        android:layout_toLeftOf="@+id/buttonDialog2"
        android:layout_toStartOf="@+id/buttonDialog2"
        android:text="@string/cancel"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/buttonDialog2"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:text="@string/confirm"
        android:textAllCaps="true" />

</RelativeLayout>