<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_survey_to"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title_details"
        android:layout_alignLeft="@+id/title_details"
        android:layout_alignRight="@+id/title_details"
        android:layout_alignStart="@+id/title_details"
        android:layout_below="@+id/title_details"
        android:layout_marginTop="11dp"
        android:text="@string/title_description_to" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/description"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:drawSelectorOnTop="true" />

    <Button
        android:id="@+id/buttonExamSave"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/spinner2"
        android:layout_marginTop="20dp"
        android:text="@string/send_survey"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/buttonBack"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/spinner2"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_chevron_left"
        android:drawableTint="@color/colorPrimary"
        android:text="@string/back"
        android:textAllCaps="true" />

</RelativeLayout>